server, agent: github app installation clone support